# handson-mlp-Geron

./: 02_end_to_end_machine_learning_project.ipynb  04_training_linear_models.ipynb  environment.yml  pyproject.toml  tools_pandas.ipynb
Exercises/: Geron_01.ipynb
