[tool.poetry]
name = "handson-mlp"
version = "1.0.0"
description = "A series of Jupyter notebooks that walk you through the fundamentals of Machine Learning and Deep Learning in Python using Scikit-Learn and PyTorch."
authors = ["Aurélien Géron]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ageron/handson-mlp"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Core scientific stack
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
numexpr = "^2.8.0"

# Jupyter environment
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
widgetsnbextension = "^4.0.0"
nbdime = "^3.2.0"

# Machine Learning
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
optuna = "^3.5.0"
statsmodels = "^0.14.0"

# Deep Learning core
torch = "^2.0.0"
torchvision = "^0.15.0"
torchaudio = "^2.0.0"
torchmetrics = "^1.0.0"
accelerate = "^0.24.0"

# NLP & Transformers
transformers = "^4.35.0"
datasets = "^2.14.0"
sentence-transformers = "^2.2.0"
sentencepiece = "^0.1.99"
nltk = "^3.8.0"
peft = "^0.6.0"
trl = "^0.7.0"
einops = ">=0.8.1"

# Reinforcement Learning
gymnasium = {extras = ["atari"], version = "^0.29.0"}
stable-baselines3 = "^2.1.0"
ale-py = ">=0.11.2"
pygame = "^2.5.0"

# Computer Vision & Generation
diffusers = "^0.23.0"
ultralytics = "^8.0.0"
lion-pytorch = "^0.1.0"
onnx = "^1.15.0"
tensorboard = "^2.14.0"

# Other utilities & APIs
joblib = "^1.3.0"
pillow = "^10.0.0"
graphviz = "^0.20.0"
urlextract = "^1.8.0"
google-genai = "^0.3.0"
requests = "^2.31.0"
tqdm = "^4.65.0"

# Note: box2d is excluded—install manually if needed

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = {version = "^23.0.0", extras = ["jupyter"]}
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
